# AI-Video-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RESTORE_POINT.txt  app.py  deploy.sh  docker-compose.yml  huggingface.yaml  main.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/ui/: __init__.py  components.py  styles.py
src/: __init__.py  config.py
src/audio/: __init__.py  chunker.py  converter.py  downloader.py  paths.py  uploader.py
src/cli/: __init__.py  main.py
src/processing/: __init__.py  extractor.py  llm.py  summarizer.py  title.py
src/storage/: __init__.py  cache.py  vector.py
src/transcription/: __init__.py  whisper.py
tests/: test_audio_upload.py
